--- a/oralock-fd/src/app/components/lock-manager/lock-manager.component.html
+++ b/oralock-fd/src/app/components/lock-manager/lock-manager.component.html
@@ -74,8 +74,8 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'object'|translate}}</th>
       <td mat-cell *matCellDef="let element">
         <img [src]="'assets/object/'+element.icon" width="16px">
-        <a routerLink="." queryParamsHandling="preserve" (click)="showLog(element)"
-          style="margin-left: 4px;" [style]="element.isBlocked ? 'color:red' : ''">{{(element.label|translatedb) + ' ' + element.owner + '.' + element.name}}</a>
+        <span
+          style="margin-left: 4px;" [style]="element.isBlocked ? 'color:red' : ''">{{(element.label|translatedb) + ' ' + element.owner + '.' + element.name}}</span>
       </td>
     </ng-container>
 
@@ -98,7 +98,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showLog(row)"></tr>
 
   </table>
 </div>
