--- a/oralock-fd/src/app/components/user-list/user-list.component.html
+++ b/oralock-fd/src/app/components/user-list/user-list.component.html
@@ -31,7 +31,7 @@
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'user-list.name'|translate}}</th>
             <td mat-cell *matCellDef="let element" [class.row-disabled]="element.disabled!=null"> 
-            <a routerLink="." queryParamsHandling="preserve" (click)="edit(element)">{{element.name}}</a>
+            <span>{{element.name}}</span>
             </td>
         </ng-container>
 
@@ -74,7 +74,7 @@
         </ng-container>        
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="edit(row)"></tr>
 
     </table>
 </div>
