--- a/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
+++ b/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
@@ -58,6 +58,10 @@
     transition: opacity .2s;    
 }
 
+.lock-image:hover .lock-image-main {
+    opacity: 0;
+}
+
 .lock-image:hover .lock-image-overlay {
     opacity: 1;
 }
