--- a/oralock-fd/src/app/components/lock-manager/lock-manager.component.html
+++ b/oralock-fd/src/app/components/lock-manager/lock-manager.component.html
@@ -40,9 +40,17 @@
   </mat-form-field>
 
   <button mat-raised-button class="btn btn-primary ml-4" color="primary" (click)="getOracleObjects()"
-    [disabled]="!(selectedSchema || selectedType || selectedNombre || selectedUser)">
+    [disabled]="!((selectedSchema && selectedSchema.username!='') || (selectedType && selectedType.id!='') || (selectedUser && selectedUser!='') || (selectedNombre && selectedNombre!=''))">
     <mat-icon>search</mat-icon>
     {{'btn.buscar'|translate}}
+  </button>
+
+  <div class="spacer"></div>
+
+  <button mat-raised-button class="btn btn-primary ml-4" color="secondary" (click)="clearFilter()"
+    [disabled]="!((selectedSchema && selectedSchema.username!='') || (selectedType && selectedType.id!='') || (selectedUser && selectedUser!='') || (selectedNombre && selectedNombre!=''))">
+    <mat-icon>clear</mat-icon>
+    {{'btn.clean'|translate}}
   </button>
 
 </mat-toolbar>
@@ -50,23 +58,23 @@
 <mat-progress-bar mode="indeterminate" *ngIf="loading"></mat-progress-bar>
 
 <div class="table-container mat-elevation-z8">
-  <table id="tableObjects" mat-table matSort [dataSource]="dataSourceOracleObject" (matSortChange)="announceSortChange($event)">
+  <table id="tableObjects" mat-table matSort [dataSource]="dataSourceOracleObject"
+    (matSortChange)="announceSortChange($event)">
 
     <ng-container matColumnDef="lock">
       <th mat-header-cell *matHeaderCellDef>{{'locked'|translate}}</th>
       <td mat-cell *matCellDef="let element">
-          <img src="assets/48x48/lock48_disabled.png" 
-              [title]="'locked.by-user'|translate: {user: element.lock.user}"
-              *ngIf="element.isBlocked && element.lock.user!==currentUser.login.toUpperCase() && !currentUser.data.roleAdmin"/>        
-          <div class="lock-image"
-            *ngIf="!element.isBlocked || element.lock.user==currentUser.login.toUpperCase() || currentUser.data.roleAdmin"
-            [title]="element.isBlocked ? ('btn.unlock'|translate) + ' ' + (element.label|translatedb) + ' ' + element.owner + '.' + element.name : ('btn.lock'|translate) + ' ' + (element.label|translatedb) + ' ' + element.owner + '.' + element.name"
-            (click)=" element.isBlocked ? unlockObject($event, element) : lockObject($event, element)">
-            <img class="lock-image-main"
-              [src]="element.isBlocked ? 'assets/48x48/lock48.png' : 'assets/48x48/unlock48.png'" width="48px">
-            <img class="lock-image-overlay"
-              [src]="element.isBlocked ? 'assets/48x48/unlock48.png' : 'assets/48x48/lock48.png'" width="48px">
-          </div>
+        <img src="assets/48x48/lock48_disabled.png" [title]="'locked.by-user'|translate: {user: element.lock.user}"
+          *ngIf="element.isBlocked && element.lock.user!==currentUser.login.toUpperCase() && !currentUser.data.roleAdmin" />
+        <div class="lock-image"
+          *ngIf="!element.isBlocked || element.lock.user==currentUser.login.toUpperCase() || currentUser.data.roleAdmin"
+          [title]="element.isBlocked ? ('btn.unlock'|translate) + ' ' + (element.label|translatedb) + ' ' + element.owner + '.' + element.name : ('btn.lock'|translate) + ' ' + (element.label|translatedb) + ' ' + element.owner + '.' + element.name"
+          (click)=" element.isBlocked ? unlockObject($event, element) : lockObject($event, element)">
+          <img class="lock-image-main"
+            [src]="element.isBlocked ? 'assets/48x48/lock48.png' : 'assets/48x48/unlock48.png'" width="48px">
+          <img class="lock-image-overlay"
+            [src]="element.isBlocked ? 'assets/48x48/unlock48.png' : 'assets/48x48/lock48.png'" width="48px">
+        </div>
       </td>
     </ng-container>
 
@@ -74,8 +82,9 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'object'|translate}}</th>
       <td mat-cell *matCellDef="let element">
         <img [src]="'assets/object/'+element.icon" width="16px">
-        <span
-          style="margin-left: 4px;" [style]="element.isBlocked ? 'color:red' : ''">{{(element.label|translatedb) + ' ' + element.owner + '.' + element.name}}</span>
+        <span style="margin-left: 4px;"
+          [style]="element.isBlocked ? 'font-weight:550;' : ''">{{(element.isBlocked ? '*': '') +
+          (element.label|translatedb) + ' ' + element.owner + '.' + element.name}}</span>
       </td>
     </ng-container>
 
@@ -94,10 +103,11 @@
 
     <ng-container matColumnDef="comment">
       <th mat-header-cell *matHeaderCellDef>{{'comment'|translate}}</th>
-      <td mat-cell *matCellDef="let element"><span class="comment">{{element.isBlocked ? element.lock.comment : ''}}</span></td>
+      <td mat-cell *matCellDef="let element"><span class="comment">{{element.isBlocked ? element.lock.comment :
+          ''}}</span></td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="showLog(row)"></tr>
 
   </table>
@@ -107,7 +117,8 @@
   <div class="white" *ngIf="dataSourceOracleObject.data.length > 0">
     <mat-icon class="btnExcel" (click)="excel()" [title]="'export.xls'|translate">save_alt</mat-icon>
   </div>
-  <span class="spacer white"></span>    
-  <mat-paginator #paginatorOracleObject="matPaginator" [pageSizeOptions]="[5, 10, 15, 20]" [pageSize]="10" showFirstLastButtons>
+  <span class="spacer white"></span>
+  <mat-paginator #paginatorOracleObject="matPaginator" [pageSizeOptions]="[5, 10, 15, 20]" [pageSize]="10"
+    showFirstLastButtons>
   </mat-paginator>
 </div>
