--- a/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
+++ b/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
@@ -1,4 +1,3 @@
-
 .mat-column-lock {
     width: 5%;
     border-right: 1px solid grey;
@@ -7,11 +6,13 @@
 }
 
 .mat-column-date {
-    width: 20%;
+    width: 25%;
+    max-width: 1px;
 }
 
 .mat-column-user {
-    width: 20%;
+    width: 17%;
+    max-width: 1px;
 }
 
 .mat-column-object {
@@ -19,8 +20,8 @@
 }
 
 .mat-column-comment {
-    width: 35%;
-    /*font-size: 0.8rem;*/
+    width: 33%;
+    max-width: 1px;
 }
 
 .comment {
@@ -36,13 +37,13 @@
 }
 
 .table-container {
-    height: calc(100vh - 230px); 
-    overflow: auto; 
+    height: calc(100vh - 230px);
+    overflow: auto;
 }
 
 .lock-image {
     position: relative;
-    max-width: 100%;    
+    max-width: 100%;
     display: inline-block;
     cursor: pointer;
 }
@@ -55,7 +56,7 @@
     bottom: 0;
     object-fit: contain;
     opacity: 0;
-    transition: opacity .2s;    
+    transition: opacity .2s;
 }
 
 .lock-image:hover .lock-image-main {
@@ -65,4 +66,3 @@
 .lock-image:hover .lock-image-overlay {
     opacity: 1;
 }
-
