--- a/oralock-fd/src/app/components/log-dialog/log-dialog.component.html
+++ b/oralock-fd/src/app/components/log-dialog/log-dialog.component.html
@@ -2,61 +2,24 @@
   <img src="assets/64x64/history64.png" id="icon" alt="Log Icon" class="header-icon" />
   <h1 mat-dialog-title>
     {{'historical'|translate}}
-    {{(data.label|translatedb) + ' ' + data.owner + '.' + data.name}}
+    {{(data.objectLog.label|translatedb) + ' ' + data.objectLog.owner + '.' + data.objectLog.name}}
   </h1>
   <span class="spacer"></span>
-  <mat-icon class="window-icon" (click)="resize()">{{ maximized ? 'fullscreen_exit' : 'crop_square'}}</mat-icon>
   <mat-icon class="window-icon" (click)="close()">close</mat-icon>
 </div>
-<div mat-dialog-content [style]="maximized ? 'max-height: unset' : ''">
-  <div class="mat-elevation-z8" [class]="maximized ? 'table-container-max': 'table-container'">
-    <table id="tableLog" mat-table matSort [dataSource]="dataSource" (matSortChange)="announceSortChange($event)">
-
-      <ng-container matColumnDef="op">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> {{'op'|translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.opLabel|translatedb}} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="date">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> {{'date'|translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.date | dateSpanish:currentUser.data.lang}}</td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="username">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> {{'user'|translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{ element.username ? element.username : element.user }} </td>
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>
-
-      <ng-container matColumnDef="ref_its">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> {{'ref'|translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{ element.ref }} </td>        
-        <td mat-footer-cell *matFooterCellDef></td>
-      </ng-container>      
-
-      <ng-container matColumnDef="comment">
-        <th mat-header-cell *matHeaderCellDef> {{'comment'|translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{ element.comment }} </td>
-        <td mat-footer-cell *matFooterCellDef style="text-align:right;font-weight: bold;">{{ 'total.locks'|translate: {locks: countLocks, compiles: countCompiles, fails: countFails} }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky:true" class="mat-elevation-z1"></tr>
-    </table>
-  </div>
-
-  <div class="d-flex flex-column flex-md-row mat-elevation-z8">
-    <div class="white" *ngIf="dataSource.data.length > 0">
-      <mat-icon class="btnExcel" (click)="excel()" [title]="'export.xls'|translate">save_alt</mat-icon>
-    </div>
-    <span class="spacer white"></span>    
-    <mat-paginator #paginator="matPaginator" [pageSizeOptions]="[5, 10, 15, 20]" [pageSize]="10" showFirstLastButtons>
-    </mat-paginator>
-  </div>
-
+<div mat-dialog-content>
+  <mat-card class="mat-elevation-z8">
+    <mat-card-header>
+      <mat-card-title>{{data.objectLog.opLabel|translatedb}}</mat-card-title>
+    </mat-card-header>
+    <mat-divider></mat-divider>
+    <mat-card-content>
+      <p style="margin-top: 16px;">{{('user'|translate) + ': ' + (data.objectLog.username ? data.objectLog.username : data.objectLog.user) }}</p>
+      <p>{{('date'|translate) + ': ' + (data.objectLog.date | dateSpanish:currentUser.data.lang)}}</p>
+      <p *ngIf="data.objectLog.ref">{{('ref'|translate) + ': ' + data.objectLog.ref }}</p>
+      <p>{{data.objectLog.comment}}</p>
+    </mat-card-content>
+  </mat-card>
 </div>
 
 <div mat-dialog-actions align="end">
