--- a/oralock-fd/src/styles.css
+++ b/oralock-fd/src/styles.css
@@ -22,6 +22,12 @@ app-root {
     flex: 1 1 auto;
 }
 
+.truncate {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
 .window-icon {
     margin-right: 8px;
     cursor: pointer;
@@ -55,6 +61,10 @@ form {
 
 .mat-mdc-form-field {
     margin-bottom: 10px;
+}
+
+[class~='mat-mdc-form-field']:last-of-type {
+    margin-bottom: 0;
 }
 
 .btnExcel {
