--- a/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
+++ b/oralock-fd/src/app/components/lock-manager/lock-manager.component.css
@@ -1,17 +1,17 @@
 .mat-column-lock {
-    width: 5%;
+    width: 2%;
     border-right: 1px solid grey;
     padding-right: 24px;
     text-align: center;
 }
 
 .mat-column-date {
-    width: 25%;
+    width: 20%;
     max-width: 1px;
 }
 
 .mat-column-user {
-    width: 17%;
+    width: 15%;
     max-width: 1px;
 }
 
@@ -22,6 +22,10 @@
 .mat-column-comment {
     width: 33%;
     max-width: 1px;
+}
+
+.mat-column-actions {
+    width: 10%;
 }
 
 .comment {
@@ -65,4 +69,8 @@
 
 .lock-image:hover .lock-image-overlay {
     opacity: 1;
+}
+
+.actions {
+    display: flex;
 }
