--- a/oralock-fd/src/styles.css
+++ b/oralock-fd/src/styles.css
@@ -23,9 +23,10 @@ app-root {
 }
 
 .truncate {
-    white-space: nowrap;
-    text-overflow: ellipsis;
     overflow: hidden;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
 }
 
 .window-icon {
